--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>in.javahome</groupId>
-	<artifactId>simple-app</artifactId>
+	<artifactId>pipelineProject</artifactId>
 	<packaging>war</packaging>
 	<version>3.0.0-SNAPSHOT</version>
-	<name>simple-app</name>
+	<name>pipelineProject</name>
 	<url>http://maven.apache.org</url>
 	
 	<dependencies>
